--- a/logica de programação/exercicio-09-crud/css/style.css
+++ b/logica de programação/exercicio-09-crud/css/style.css
@@ -44,7 +44,7 @@
     outline: none;
 }
 
-.flex button{
+#cadastrar{
     padding: 3px;
     font-size: 1em;
     font-weight: bold;
@@ -73,4 +73,16 @@
 
 .listUser p{
     margin-left: 5px;
+}
+
+
+#showUser p {
+    margin-top: 0ch;
+}
+
+
+#showUser button{
+    margin-right: 5px;
+    position: relative; right: -100px; top: -10px;
+    
 }
